# rudix

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  LICENSE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_initial_schema.py  20260520_0002_agent_run_persistence.py  20260523_0003_org_governance_policy.py  20260531_0004_collections.py  20260531_0005_collection_access_policies.py  20260531_0006_citation_offsets.py  20260601_0007_document_metadata.py  20260601_0008_chat_shares.py  20260601_0009_message_feedback.py  20260601_0010_notifications.py  20260602_0011_chunking_profile_metadata.py  20260602_0012_hierarchical_chunks.py  20260602_0013_document_lifecycle_f212.py  20260602_0014_org_chunking_profiles.py  20260602_0015_feedback_review_queue_f138.py  20260602_0016_upload_security_f142.py  20260602_0017_deletion_lifecycle_f143.py  20260602_0018_safety_eval_suite_f146.py  20260602_0019_document_language_detection_f230.py  20260602_0020_ocr_quality_metadata_f232.py  20260604_0001_pdf_extraction_pipeline_f237.py  20260604_0002_agent_timestamps_timezone_f237.py  20260604_0003_evaluation_dataset_builder_f147.py  20260604_0004_quality_gate_f149.py  20260605_0001_rag_profiles_f150.py  20260605_0002_prompt_templates_f151.py  20260605_0003_model_provider_settings_f152.py  20260605_0004_quotas_rate_limit_f154.py  20260605_0005_failed_jobs_f156.py  20260605_0006_sso_config_f160.py  20260605_0007_scim_domain_f161.py  20260605_0008_connector_platform_f238.py  20260605_0009_connector_credentials_f239.py  20260605_0010_connector_sync_engine_f240.py  20260606_0001_connector_ingestion_bridge_f245.py  20260607_0001_app_auth_sessions_and_passwords.py  20260608_0001_advanced_roles_permissions_f162.py  20260608_0002_api_keys_f165.py  20260609_0001_f219_document_embedding_metadata.py  20260609_0002_model_profiles_f220.py  (+55 more)
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  documents.py  evaluation_sets.py  evaluations.py  health.py  router.py
backend/app/application/: __init__.py
backend/app/auth/: __init__.py  authorization_service.py  dependencies.py  errors.py  factory.py  models.py  passwords.py  permission_service.py  policy_engine.py  refresh_token_store.py  repository.py  resource_context_builder.py  session_repository.py  source_authorization_adapter.py  token_codec.py
backend/app/clients/: clamav_client.py  factory.py  minio_client.py  neo4j_client.py  qdrant_client.py  rabbitmq_client.py  redis_client.py
backend/app/core/: config.py  document_errors.py  langfuse_tracer.py  lifespan.py  logging.py  safety_guardrails.py  sentry.py
backend/app/db/: base.py  session.py
backend/app/mcp/: __init__.py  auth.py  dependencies.py  main.py  policy.py  prompts.py  rate_limit.py  resource_constants.py  resource_reader.py  resource_reader_documents.py  resource_reader_query.py  resource_registry.py  resource_runtime.py  resource_types.py  resource_utils.py  resources.py  server.py  tool_catalog.py
backend/app/models/: __init__.py  ab_experiment.py  activity_timeline.py  agent.py  agent_policy.py  ai_response_policy.py  answer_share.py  api_key.py  auth_session.py  authorization.py  bot.py  chat.py  chat_share.py  chunking_profile.py  citation.py  collection.py  common.py  connector.py  connector_credential.py  connector_source.py  connector_sync.py  contact.py  custom_role.py  document.py  document_version.py  email.py  enums.py  evaluation.py  failed_job.py  feature_flags.py  feedback_review_item.py  governance.py  incident.py  (+29 more)
backend/scripts/: export_openapi.py  seed_dev.py
backend/tests/: conftest.py  test_ab_testing_f304.py  test_access_debugger_f324.py  test_access_explanation_f335.py  test_accuracy_feedback_f316.py  test_accuracy_gate_f302.py  test_admin_chunking_profiles_api.py  test_admin_failed_jobs_api.py  test_admin_governance_api.py  test_admin_language_override_api.py  test_admin_mcp_api_f175.py  test_admin_onboarding_f327.py  test_admin_permissions_f334.py  test_admin_status_f158.py  test_admin_trust_status_api_f297.py  test_admin_usage_api.py  test_admin_webhooks_api.py  test_agent_approval_queue_f172.py  test_agent_migration.py  test_agent_run_repository.py  test_agent_runs_api.py  test_agent_runtime.py  test_agent_tool_contracts.py  test_agent_tool_executor.py  test_agent_tool_policy_f173.py  test_agent_tool_registry.py  test_agent_trace_replay_f174.py  test_agent_workflows_f344.py  test_agent_workspace_f171.py  test_ai_response_policy_f268.py  test_analytics_api.py  test_answer_shares_f259.py  test_api_keys_f165.py  test_architecture_ddd.py  test_audit_service.py  test_auth_api.py  test_auth_clerk_api.py  test_auth_dependencies.py  test_auth_provider.py  test_authorization_enforcement_f332.py  (+191 more)
(+1320 files in other folders)
