[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for AI Document Q&A Assistant"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Rudix Team" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "structlog>=24.4.0,<25.0.0",
  "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.8,<6.0.0",
  "pika>=1.3.2,<2.0.0",
  "boto3>=1.35.0,<2.0.0",
  "qdrant-client>=1.11.0,<2.0.0",
  "openai>=1.51.0,<2.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "tiktoken>=0.8.0,<1.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "ragas>=0.2.0,<1.0.0",
  "sentry-sdk[fastapi]>=2.16.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.8.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "types-redis>=4.6.0",
  "types-python-dateutil>=2.9.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
plugins = []
