[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for AI Document Q&A Assistant"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Rudix Team" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "mcp>=1.9.0,<2.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "structlog>=24.4.0,<25.0.0",
  "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.8,<6.0.0",
  "pika>=1.3.2,<2.0.0",
  "boto3>=1.35.0,<2.0.0",
  "qdrant-client>=1.11.0,<2.0.0",
  "openai>=1.51.0,<2.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "tiktoken>=0.8.0,<1.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "sentry-sdk[fastapi]>=2.16.0,<3.0.0",
  "langfuse>=2.0.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "cryptography>=49.0.0,<50.0.0",
  "argon2-cffi>=23.1.0,<24.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "neo4j>=5.0.0,<6.0.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.4.0,<2.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "pytest-timeout>=2.3.0,<3.0.0",
  "pip-audit>=2.10.1,<3.0.0",
  "ruff>=0.8.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "types-redis>=4.6.0",
  "types-python-dateutil>=2.9.0",
  "pre-commit>=4.0.0,<5.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --timeout=30"
asyncio_mode = "auto"
markers = [
  "isolation: RAG and vector isolation regression tests (F144 — release blocker for v0.4.0)",
  "guardrails: Prompt injection and citation validation guardrail tests (F145 — release blocker for v0.4.0)",
  "connector_contract: Connector provider adapter contract tests (F241)",
  "governance: Graph governance RBAC, audit, and tenant isolation tests (F290)",
  "requires_postgres: Tests requiring a live PostgreSQL instance at localhost:5432",
  "requires_redis: Tests requiring a live Redis instance at localhost:6379",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
plugins = []

[[tool.mypy.overrides]]
module = [
  "app.auth.resource_context_builder",
  "app.clients.neo4j_client",
  "app.core.*",
  "app.domains.ai.providers.*",
  "app.domains.billing.*",
  "app.domains.chat.*",
  "app.domains.collections.repositories.collections",
  "app.domains.connectors.services.platform_observability",
  "app.domains.documents.chunking.strategies.*",
  "app.domains.feedback_review.*",
  "app.domains.graph.*",
  "app.domains.quota.*",
  "app.domains.scim.*",
  "app.domains.sso.*",
  "app.interfaces.http.*",
  "app.workers.*",
]
ignore_errors = true
